# vcpkg-test

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: build-and-run.sh  install-vcpkg-deps.sh  install-vcpkg.sh
src/: main.cpp
